objects/blng__BalanceSnapShotRun__c.object
<CustomObject>
    <fields>
        <fullName>blng__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BalanceSnapshotScheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Balance Snapshot Scheduler</label>
        <referenceTo>blng__BalanceSnapShotScheduler__c</referenceTo>
        <relationshipLabel>Balance SnapShot Runs</relationshipLabel>
        <relationshipName>BalanceSnapshotRuns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__BalanceSnapshotStatus</valueSetName>
        </valueSet>
    </fields>
    <label>Balance Snapshot Run</label>
    <nameField>
        <label>Balance Snapshot Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Balance Snapshot Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>